--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,137 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
 body {
- color: goldenrod;
+    font-family: 'Open Sans', sans-serif;
+    margin: 0px;
 }
 
-h1 {
-    color: blue;
+:root {
+    --primary-color: green;
+    --important-color: brown;
+    --off-color: #E5E7EB;
+    --footer-color: #6B7280;
 }
 
-h2 {
-    color: green;
+hr {
+    margin: 2rem 0rem;
 }
 
-#lib-header {
-    color: gray;
+/** containers **/
+.container {
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
-.para {
-    color: pink;
+.container-centre {
+    max-width: 1000px;
+    margin: auto;
+}
+
+/** links **/
+
+.link {
+    text-decoration: none;
+    padding: 0.25rem 0.75rem;
+    border-radius: 0.5rem;
+}
+
+.link-primary {
+    background-color: var(--primary-color);
+    color: white;
+}
+
+.link-secondary {
+    color: var(--primary-color);
+    background-color: white;
+    border: 1px solid var(--primary-color) ;
+}
+
+/** lists **/
+
+.list-non-bullet {
+    list-style: none;
+}
+
+.list-item-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
+}
+
+/** navigation **/
+
+.navigation {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 1rem;
+    border-bottom-left-radius: 1rem;
+}
+
+.navigation .link {
+    color: white;
+}
+
+.navigation .nav-pills {
+    text-align: right;
+}
+
+.navigation .nav-brand {
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+.navigation .link-active {
+    font-weight: bold;
+}
+
+/** header **/
+
+.hero {
+    padding: 2rem;
+}
+
+.hero .hero-img {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+
+.hero .hero-heading {
+    text-align: center;
+}
+
+.hero .hero-heading .heading-inverted {
+    color: var(--important-color);
+}
+
+/** section **/
+
+.section  {
+    padding: 2rem;
+}
+
+.section h1 {
+    text-align: center;
+}
+
+.off-white {
+    background-color: var(--off-color);
+}
+
+/** footer **/
+
+.footer {
+    background-color: var(--primary-color);
+    padding: 2rem 1rem;
+    text-align: center;
+    color: white;
+    border-top-right-radius: 1rem;
+}
+
+
+.footer .list-non-bullet .link {
+    color: white;
+}
+
+.footer ul {
+    padding-inline-start: 0px;
 }
